--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:GALKqhXVMOzuVHFm,iv:qdJwip2tzm63M/yQercChoNnkxIxRh/4F6bQQvEhd20=,tag:gFTptzM7kdDBUXRf0H/1RA==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:jIDPnmttryrhW8Gj,iv:qYk5mDNwH6vOu6f+T6Qi/3yv7hrWGo0A0VvQZ7K0ApY=,tag:O1yo5VrBFmUbWWBHW5w2BQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age1je98fjlwqdjlqm3wp039t6tj92plzl8y5dcaat654tlcg82g49cq3uylh4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxR0FBeHI3TUp6aGlmU3N3
-        VjRQVVdzd2VkYlJ0OHpsQmRtQk9XNjRtK2xNClpCZ2U0S3JaM0FaalFrZ3MzTmxV
-        Ry8rOTlRNzNTYjBmMzNEV05XalA0cTAKLS0tIEVUamZxcXZjTjM2T2VXck0yRFNU
-        b1E0bno2WU9zdGNCalJSTHJCUnBTeGsKCtq8iUAajtMSgA7uPueGO7soke/yAHdF
-        WKsy31sV5xyZlsZAe9QYr0oYZJljVMyqRPrgT7M+E05oErz5BcMFdQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVZG02WVVGUDZTTW1ZRFN2
+        MVFpRjFpNThVK3M2UWtqM09LRHpPczRLUm1FCmw2aHcwSG0raTN5V2NlbFpQVnVM
+        aHhYY1BoTjA5bFdKZ3kyL1ZKVjhzWDgKLS0tIHh3R3BWdjVwdXhsZ2hYWFcvTnNN
+        a3hxcVprL2dBRng3clZTbCs5NDUzNU0KabeCjy3Ll8PZ4THWeMRbscoXKrB7meKx
+        ffP6DF3M5Kwu4wOJCf5IIjRG+Y+cXxF0wmBga42JW11YeVmYnTiE5Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-18T00:36:17Z"
-  mac: ENC[AES256_GCM,data:ypylhiSgsuTQ1n7gQmpRLVXUWpfri6hbfpEpEfEhGEww21SlYracE2BPtSM+8BbAK43xFDQaSp6ay+hJYwBm6m+BEjgAgJT1Rx7Ek00TBzJxyw3lVICLN8P21/ma9p8o3KzqBEqonKEiHjP78N25hIMcvEdLz8gjO5pNB3dxHbI=,iv:SjWYRsugUKslvZhw2LIEqGt2460JagSgronUANUPdYQ=,tag:XgSbU2yXEGhf/Ww7lPST2w==,type:str]
+  lastmodified: "2025-04-18T01:35:13Z"
+  mac: ENC[AES256_GCM,data:LuY8CCqvXr4dwkuWICl1nxjfyfCDEOxbeaZKCK7tG4hxUia7MMQeaBIi+F+tuInm8Kpr0PxYVXHf+Y5DEcP4ESfiw0mWOonXiYZuI8uI/myW4JwTTrR+xCBf8rK993tY4Ru074hMg1EUI8pf1CrFVeNJlsBF3sMaZAYBV0Aa2Gw=,iv:vmg2xyI69hJmyRM7loSVNaIy7I7GHnVYuAeUkhztVhk=,tag:j/rJy6j1VmFS//TKwfNVWw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
