chore: another `initial` commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:jIDPnmttryrhW8Gj,iv:qYk5mDNwH6vOu6f+T6Qi/3yv7hrWGo0A0VvQZ7K0ApY=,tag:O1yo5VrBFmUbWWBHW5w2BQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:rfReD/vGiOaLmb/Z,iv:H/Y9WTv37JGc5XtOc+gPldqWxKZp2Ir9Oxv0zDYCP9Y=,tag:m2CNOcrK6Btply9+e/Eqsg==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age1je98fjlwqdjlqm3wp039t6tj92plzl8y5dcaat654tlcg82g49cq3uylh4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVZG02WVVGUDZTTW1ZRFN2
-        MVFpRjFpNThVK3M2UWtqM09LRHpPczRLUm1FCmw2aHcwSG0raTN5V2NlbFpQVnVM
-        aHhYY1BoTjA5bFdKZ3kyL1ZKVjhzWDgKLS0tIHh3R3BWdjVwdXhsZ2hYWFcvTnNN
-        a3hxcVprL2dBRng3clZTbCs5NDUzNU0KabeCjy3Ll8PZ4THWeMRbscoXKrB7meKx
-        ffP6DF3M5Kwu4wOJCf5IIjRG+Y+cXxF0wmBga42JW11YeVmYnTiE5Q==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5VTF3RWl1OTlwdlFqaTRs
+        L05oZEFSSUdnYnpkcVRYMkU2TUNRYlF1YXdnCjRxTnBpMVQ3amh3akV0dWx1TXBW
+        YjRueGFyOUFNNWZmZ1hqYzFIYTFObUkKLS0tIGgwL255M09mby9mb0tSN0lxTHl3
+        aXlncWxmbHlOSEF4YzlHbDBoNnFaVnMKX0x3mAR7HzBgBLLC7rextlGRNk7A7fct
+        NirOK+Q5ce8SmP6FejCwQu/NY1u7WAa5qD805IRMT8cPUDFCBOadvw==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-18T01:35:13Z"
-  mac: ENC[AES256_GCM,data:LuY8CCqvXr4dwkuWICl1nxjfyfCDEOxbeaZKCK7tG4hxUia7MMQeaBIi+F+tuInm8Kpr0PxYVXHf+Y5DEcP4ESfiw0mWOonXiYZuI8uI/myW4JwTTrR+xCBf8rK993tY4Ru074hMg1EUI8pf1CrFVeNJlsBF3sMaZAYBV0Aa2Gw=,iv:vmg2xyI69hJmyRM7loSVNaIy7I7GHnVYuAeUkhztVhk=,tag:j/rJy6j1VmFS//TKwfNVWw==,type:str]
+  lastmodified: "2025-04-18T19:25:13Z"
+  mac: ENC[AES256_GCM,data:WxEIT/QhfFE2rA7p1dUxh1zSRutvVBJiC/JxJm0xA5Y9iZtABqQt6DUiCcvrIMNu3AiBw2GO+mYc1DRyBLH4f6Oa7FL/Qco6SpU0BAFgG/OgxaxfnuJldniyXVXyFVGKETNwRosuClU/wurhGnKktrkZez/wEYEdwFlE7GaQwz4=,iv:LFEyMwDWhpfKO2Ga4Lk1JMV/McYuMBHS/nIuDcM3NPk=,tag:VuQyGtXqDDCMBtDzOZgC6w==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
