--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:rfReD/vGiOaLmb/Z,iv:H/Y9WTv37JGc5XtOc+gPldqWxKZp2Ir9Oxv0zDYCP9Y=,tag:m2CNOcrK6Btply9+e/Eqsg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:XYSb0TjtPfs+Ndjd,iv:pNoRdRnfDxc0sq6nhPZbCRG1+6vvYTtSC4TMWN6Twtw=,tag:wahFlQ2DmxD0HvEdn1yCGQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age1je98fjlwqdjlqm3wp039t6tj92plzl8y5dcaat654tlcg82g49cq3uylh4
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5VTF3RWl1OTlwdlFqaTRs
-        L05oZEFSSUdnYnpkcVRYMkU2TUNRYlF1YXdnCjRxTnBpMVQ3amh3akV0dWx1TXBW
-        YjRueGFyOUFNNWZmZ1hqYzFIYTFObUkKLS0tIGgwL255M09mby9mb0tSN0lxTHl3
-        aXlncWxmbHlOSEF4YzlHbDBoNnFaVnMKX0x3mAR7HzBgBLLC7rextlGRNk7A7fct
-        NirOK+Q5ce8SmP6FejCwQu/NY1u7WAa5qD805IRMT8cPUDFCBOadvw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByN1Q0ZEJTNG1MVDk4OGpV
+        RWExR1VZVjN1aDUwcmNadTFZTE5tWnBuNUhvCnkxaG9CeldkcFZtUlY4STY2aFZs
+        Szk4clFjZHRKQ2UvZDdtUUJFelVNdWMKLS0tIE83cS9BclZiNndrV1pVNXJCNWJp
+        MVJJK0Y0RXI3cDFMZ0o5bUJsUzBsUFkKoT3+6+6WkZLRNty9JE0t2TQJIkTsZili
+        qaBbVt9Z08Zt3vqdvxeSTg9JPG3H2rOt7yPoDS8u72t0tIpgHi6kBg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-18T19:25:13Z"
-  mac: ENC[AES256_GCM,data:WxEIT/QhfFE2rA7p1dUxh1zSRutvVBJiC/JxJm0xA5Y9iZtABqQt6DUiCcvrIMNu3AiBw2GO+mYc1DRyBLH4f6Oa7FL/Qco6SpU0BAFgG/OgxaxfnuJldniyXVXyFVGKETNwRosuClU/wurhGnKktrkZez/wEYEdwFlE7GaQwz4=,iv:LFEyMwDWhpfKO2Ga4Lk1JMV/McYuMBHS/nIuDcM3NPk=,tag:VuQyGtXqDDCMBtDzOZgC6w==,type:str]
+  lastmodified: "2025-04-18T19:31:06Z"
+  mac: ENC[AES256_GCM,data:/Yg129jDieKoz+7r2Jk0BWNyIOZm4uk3LIp/tSGTxUEIhBTMY/mU1/q2vVmPJ+7fMiX6MmxTGvVsyZPiSJflJAq7cAPa+CM9UON75XqJBABLTQmk4HD6rM0bjV4y1zaSmU+/wuBoaghbWfvuo4LWG6DmLHy5Xwozy34zFa363LY=,iv:HS3TSB/h9rsFyedw9obtv8GJBWuFuE2dWM1YZCHUfgk=,tag:jpKxmgohiiEpugQ9ogZTDg==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
