--- a/talos/clusterconfig/.gitignore
+++ b/talos/clusterconfig/.gitignore
@@ -1,7 +1,4 @@
-kubernetes-vrtx-alpha.yaml
-kubernetes-vrtx-beta.yaml
-kubernetes-vrtx-charle.yaml
 talosconfig
 vrtx-cluster-vrtx-alpha.yaml
-vrtx-cluster-vrtx-beta.yaml
-vrtx-cluster-vrtx-charle.yaml
+vrtx-cluster-vrtx-bravo.yaml
+vrtx-cluster-vrtx-charlie.yaml
