--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cluster-secrets
+    name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:XYSb0TjtPfs+Ndjd,iv:pNoRdRnfDxc0sq6nhPZbCRG1+6vvYTtSC4TMWN6Twtw=,tag:wahFlQ2DmxD0HvEdn1yCGQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:MRoyHfeNYHzlYYc=,iv:5bZKFAVzdCQajjQp0yd9n07QLPF9QgLn16VI2NE/BGw=,tag:Jwbes7zSWnzILghRwMGPbg==,type:str]
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
-  age:
-    - recipient: age1je98fjlwqdjlqm3wp039t6tj92plzl8y5dcaat654tlcg82g49cq3uylh4
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByN1Q0ZEJTNG1MVDk4OGpV
-        RWExR1VZVjN1aDUwcmNadTFZTE5tWnBuNUhvCnkxaG9CeldkcFZtUlY4STY2aFZs
-        Szk4clFjZHRKQ2UvZDdtUUJFelVNdWMKLS0tIE83cS9BclZiNndrV1pVNXJCNWJp
-        MVJJK0Y0RXI3cDFMZ0o5bUJsUzBsUFkKoT3+6+6WkZLRNty9JE0t2TQJIkTsZili
-        qaBbVt9Z08Zt3vqdvxeSTg9JPG3H2rOt7yPoDS8u72t0tIpgHi6kBg==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-18T19:31:06Z"
-  mac: ENC[AES256_GCM,data:/Yg129jDieKoz+7r2Jk0BWNyIOZm4uk3LIp/tSGTxUEIhBTMY/mU1/q2vVmPJ+7fMiX6MmxTGvVsyZPiSJflJAq7cAPa+CM9UON75XqJBABLTQmk4HD6rM0bjV4y1zaSmU+/wuBoaghbWfvuo4LWG6DmLHy5Xwozy34zFa363LY=,iv:HS3TSB/h9rsFyedw9obtv8GJBWuFuE2dWM1YZCHUfgk=,tag:jpKxmgohiiEpugQ9ogZTDg==,type:str]
-  pgp: []
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.9.4
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1je98fjlwqdjlqm3wp039t6tj92plzl8y5dcaat654tlcg82g49cq3uylh4
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByN1Q0ZEJTNG1MVDk4OGpV
+            RWExR1VZVjN1aDUwcmNadTFZTE5tWnBuNUhvCnkxaG9CeldkcFZtUlY4STY2aFZs
+            Szk4clFjZHRKQ2UvZDdtUUJFelVNdWMKLS0tIE83cS9BclZiNndrV1pVNXJCNWJp
+            MVJJK0Y0RXI3cDFMZ0o5bUJsUzBsUFkKoT3+6+6WkZLRNty9JE0t2TQJIkTsZili
+            qaBbVt9Z08Zt3vqdvxeSTg9JPG3H2rOt7yPoDS8u72t0tIpgHi6kBg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-04-18T20:30:14Z"
+    mac: ENC[AES256_GCM,data:rlm91nNnQylwmRzfpaaOF5xsfMxWdyKTWXL+MjOJFqBKONK2igv1UGsjc/v2xTLpc1rOVerXzqhgh0oQumt6qyWjKJe65bV1OrVtXemUnw83VJTYTj47ZV1Dw5JgUvCAEq/YAE60hzso/TsfRWFlaO76aBm8wL+JaCkSf74StxU=,iv:ZhyZprgKcxinOHh8SePgumQmZZKUviisCk3wBzw75F8=,tag:k3XWhs759GO1XzoBlbWGHQ==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    mac_only_encrypted: true
+    version: 3.9.4
