--- a/kubernetes/apps/network/external/external-dns/helmrelease.yaml
+++ b/kubernetes/apps/network/external/external-dns/helmrelease.yaml
@@ -39,8 +39,7 @@ spec:
       - --events
       - --ignore-ingress-tls-spec
       - --ingress-class=external
-      - --policy=upsert-only
-    policy: sync
+    policy: upsert-only
     sources: ["crd", "ingress"]
     txtPrefix: k8s.
     txtOwnerId: default
