--- a/kubernetes/apps/external-secrets/stores/onepassword-connect/ks.yaml
+++ b/kubernetes/apps/external-secrets/stores/onepassword-connect/ks.yaml
@@ -16,5 +16,6 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
+    namespace: flux-system
   wait: true
