--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -4,6 +4,7 @@ metadata:
     name: cluster-secrets
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:MRoyHfeNYHzlYYc=,iv:5bZKFAVzdCQajjQp0yd9n07QLPF9QgLn16VI2NE/BGw=,tag:Jwbes7zSWnzILghRwMGPbg==,type:str]
+    NAS_IP: ENC[AES256_GCM,data:tH+d/pxZlXiSezchDw==,iv:CB4lR/uNmBcSnkOdUmyV8Y+S9f0y7wheRRWf6+/GNvE=,tag:frfT6oMYu0rA4f8NiJDSGg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,8 +20,8 @@ sops:
             MVJJK0Y0RXI3cDFMZ0o5bUJsUzBsUFkKoT3+6+6WkZLRNty9JE0t2TQJIkTsZili
             qaBbVt9Z08Zt3vqdvxeSTg9JPG3H2rOt7yPoDS8u72t0tIpgHi6kBg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-18T20:30:14Z"
-    mac: ENC[AES256_GCM,data:rlm91nNnQylwmRzfpaaOF5xsfMxWdyKTWXL+MjOJFqBKONK2igv1UGsjc/v2xTLpc1rOVerXzqhgh0oQumt6qyWjKJe65bV1OrVtXemUnw83VJTYTj47ZV1Dw5JgUvCAEq/YAE60hzso/TsfRWFlaO76aBm8wL+JaCkSf74StxU=,iv:ZhyZprgKcxinOHh8SePgumQmZZKUviisCk3wBzw75F8=,tag:k3XWhs759GO1XzoBlbWGHQ==,type:str]
+    lastmodified: "2025-04-20T04:25:19Z"
+    mac: ENC[AES256_GCM,data:HmqGgc5JQfYDp15UXj/uC7xdk1CiaeKKLT5V781dUcZkeAoxM8gmOS1HOpOr5nL7e7qqTe4W5/Zk8Wr8i5MV0nwkIDXq3K8N+BMNvf3FRfWUr+XWRYyzA/dl7wCkwBazA3cu3+jc9iGFxR31swVtWsAkMqJAfA+vnYQrGHVMLcA=,iv:+xu2RsfnHB3IGGQ0x7HxdJQ7oxCFxhnWU373BWGmvW0=,tag:TlboBYvOTNEai7RJriLRaA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     mac_only_encrypted: true
