--- a/kubernetes/apps/volsync-system/kustomization.yaml
+++ b/kubernetes/apps/volsync-system/kustomization.yaml
@@ -2,7 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: volsync-system
+components:
+  - ../../components/common
 resources:
-  - ./external-dns.yaml
-  - ./ingress-nginx.yaml
-  - ./external-secrets/ks.yaml
+  - ./volsync/ks.yaml
