--- a/kubernetes/apps/volsync-system/volsync/app/kustomization.yaml
+++ b/kubernetes/apps/volsync-system/volsync/app/kustomization.yaml
@@ -3,6 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./external-dns.yaml
-  - ./ingress-nginx.yaml
-  - ./external-secrets/ks.yaml
+  - ./helmrelease.yaml
+  - ./mutatingadmissionpolicy.yaml
+  - ./prometheusrule.yaml
