--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -7,7 +7,9 @@ components:
   - ../../components/common
 resources:
   - ./cilium/ks.yaml
+  - ./descheduler/ks.yaml
   - ./coredns/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
+  - ./snapshot-controller/ks.yaml
   - ./spegel/ks.yaml
