feat: implement Gateway API for HTTP routing
- Add Gateway API CRDs to bootstrap-apps.sh
- Enable Gateway API in Cilium configuration
- Create internal Gateway resource for HTTPRoute parentRefs
- Update kustomization to include Gateway resources

This allows HTTPRoute resources to work properly in the cluster, particularly for
the Rook-Ceph dashboard.

--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -16,9 +16,16 @@ cgroup:
 endpointRoutes:
   enabled: true
 envoy:
-  enabled: false
+  enabled: true
+  rollOutPods: true
+  prometheus:
+    serviceMonitor:
+      enabled: true
 dashboards:
   enabled: true
+gatewayAPI:
+  enabled: true
+  enableAlpn: true
 hubble:
   enabled: false
 ipam:
