--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
 resources:
   - ./cilium/ks.yaml
+  - ./cilium/gateway/ks.yaml
   - ./descheduler/ks.yaml
   - ./coredns/ks.yaml
   - ./metrics-server/ks.yaml
