--- a/kubernetes/apps/observability/snmp-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/snmp-exporter/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     operation: copy
   ref:
     tag: 9.2.1
-  url: oci://registry-1.docker.io/prometheus-community/prometheus-snmp-exporter
+  url: oci://ghcr.io/prometheus-community/charts/prometheus-snmp-exporter
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
