--- a/kubernetes/apps/observability/promtail/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/promtail/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     operation: copy
   ref:
     tag: 6.16.6
-  url: oci://registry-1.docker.io/grafana/promtail
+  url: oci://ghcr.io/grafana/helm-charts/promtail
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
