--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -7,13 +7,10 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword
+    name: onepassword-connect
   target:
     name: grafana-admin-secret
     template:
       data:
-        admin-user: "{{ .GRAFANA_ADMIN_USERNAME }}"
-        admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
-  dataFrom:
-    - extract:
-        key: grafana
+        admin-user: admin
+        admin-password: password
