fix: properly configure ExternalSecret for Grafana with dataFrom field

--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -8,9 +8,13 @@ spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
+  refreshInterval: 5m
   target:
     name: grafana-admin-secret
     template:
       data:
-        admin-user: admin
-        admin-password: password
+        admin-user: "{{ .GRAFANA_ADMIN_USERNAME }}"
+        admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
+  dataFrom:
+    - extract:
+        key: grafana
