--- a/kubernetes/apps/network/internal/k8s-gateway/helmrelease.yaml
+++ b/kubernetes/apps/network/internal/k8s-gateway/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
       retries: 3
   values:
     fullnameOverride: k8s-gateway
-    domain: "${SECRET_DOMAIN}"
+    domain: "k8s.${SECRET_DOMAIN}"
     ttl: 1
     service:
       type: LoadBalancer
