--- a/kubernetes/apps/network/internal/k8s-gateway/helmrelease.yaml
+++ b/kubernetes/apps/network/internal/k8s-gateway/helmrelease.yaml
@@ -41,4 +41,6 @@ spec:
       annotations:
         lbipam.cilium.io/ips: "192.168.168.205"
       externalTrafficPolicy: Cluster
-    watchedResources: ["Ingress", "Service", "HTTPRoute", "Gateway"]
+    watchedResources: ["Ingress", "Service"]
+    apex: k8s-gateway.network
+    ignoreGatewayError: true
