fix: add back cloudflare-tunnel-secret reference in substituteFrom

--- a/kubernetes/apps/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/ks.yaml
@@ -18,6 +18,8 @@ spec:
   postBuild:
     substituteFrom:
       - kind: Secret
+        name: cloudflare-tunnel-secret
+      - kind: Secret
         name: cluster-secrets
   prune: true
   retryInterval: 2m
