--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -31,20 +31,20 @@ spec:
           secretKeyRef:
             name: &secret cloudflare-dns-secret
             key: *name
-      - name: &name CF_ZONE_ID
-        valueFrom:
-          secretKeyRef:
-            name: *secret
-            key: *name
+      # - name: &name CF_ZONE_ID
+      #   valueFrom:
+      #     secretKeyRef:
+      #       name: *secret
+      #       key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
       - --cloudflare-proxied
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
       - --gateway-name=external
-      - --zone-id-filter=$(CF_ZONE_ID)
+      # - --zone-id-filter=$(CF_ZONE_ID)
     triggerLoopOnEvent: true
-    policy: sync
+    policy: upsert-only
     sources: ["crd", "gateway-httproute"]
     txtOwnerId: default
     txtPrefix: k8s.
