--- a/kubernetes/apps/iot/emqx/cluster/kustomization.yaml
+++ b/kubernetes/apps/iot/emqx/cluster/kustomization.yaml
@@ -2,8 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
-components:
-  - ../../components/common
-  - ../../components/repos/common/app-template
-resources: []
+resources:
+  - ./cluster.yaml
+  - ./gatus.yaml
+  - ./podmonitor.yaml
