--- a/kubernetes/components/common/kustomization.yaml
+++ b/kubernetes/components/common/kustomization.yaml
@@ -5,4 +5,6 @@ kind: Component
 resources:
   - ./cluster-secrets.sops.yaml
   - ./namespace.yaml
+  - ./alerts
+  - ./repos
   - ./sops-age.sops.yaml
