--- a/kubernetes/components/common/repos/app-template/ocirepository.yaml
+++ b/kubernetes/components/common/repos/app-template/ocirepository.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/ocirepository-source-v1beta2.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
@@ -12,5 +12,3 @@ spec:
   ref:
     tag: 3.7.3
   url: oci://ghcr.io/bjw-s/helm/app-template
-  verify:
-    provider: cosign
