fix: prefix vrtx- until old cluster is gone

--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -93,7 +93,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.${SECRET_DOMAIN}"
-          - status.${SECRET_DOMAIN}
+          - vrtx-status.${SECRET_DOMAIN}
         parentRefs:
           - name: external
             namespace: kube-system
