feat: add PrometheusRules for Flux and Cert-Manager monitoring
- Add monitoring rules for Flux instance status
- Add monitoring rules for certificate expiration and status
- Update kustomization files to include new resources

--- a/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./helmrelease.yaml
   - ./secret.sops.yaml
   - ./httproute.yaml
+  - ./prometheusrule.yaml
   - ./receiver.yaml
 configMapGenerator:
   - name: flux-instance-values
