feat: add iot interfaces, this may break everything

--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -12,7 +12,8 @@ cgroup:
     enabled: false
   hostRoot: /sys/fs/cgroup
 # NOTE: devices might need to be set if you have more than one active NIC on your hosts
-devices: "bond0.168"
+devices: "bond0+"
+directRoutingDevice: "bond0.168"
 endpointRoutes:
   enabled: true
 envoy:
