--- a/talos/clusterconfig/.gitignore
+++ b/talos/clusterconfig/.gitignore
@@ -2,3 +2,4 @@ talosconfig
 vrtx-cluster-vrtx-alpha.yaml
 vrtx-cluster-vrtx-bravo.yaml
 vrtx-cluster-vrtx-charlie.yaml
+vrtx-cluster-vrtx-delta.yaml
