--- a/kubernetes/apps/kube-system/cilium/app/networks.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networks.yaml
@@ -3,11 +3,20 @@
 apiVersion: cilium.io/v2alpha1
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: pool
+  name: k8s-pool
 spec:
   allowFirstLastIPs: "No"
   blocks:
     - cidr: "192.168.168.0/24"
+---
+apiVersion: cilium.io/v2alpha1
+kind: CiliumLoadBalancerIPPool
+metadata:
+  name: iot-pool
+spec:
+  allowFirstLastIPs: "No"
+  blocks:
+    - cidr: "192.168.252.0/24"
 ---
 # yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliuml2announcementpolicy_v2alpha1.json
 apiVersion: cilium.io/v2alpha1
@@ -18,6 +27,7 @@ spec:
   loadBalancerIPs: true
   interfaces:
     - bond0.168
+    - bond0.252
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
