chore: Enable EMQX

--- a/kubernetes/apps/iot/kustomization.yaml
+++ b/kubernetes/apps/iot/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: iot
 components:
   - ../../components/common
-resources: []
-  # - ./emqx/ks.yaml
+resources:
+  - ./emqx/ks.yaml
+
