--- a/kubernetes/apps/iot/emqx/app/externalsecret.yaml
+++ b/kubernetes/apps/iot/emqx/app/externalsecret.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword
+    name: onepassword-connect
   target:
     name: emqx-secret
     template:
@@ -27,7 +27,7 @@ spec:
   refreshInterval: 5m
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword
+    name: onepassword-connect
   target:
     name: emqx-init-user-secret
     template:
