feat: Add HTTPRoute for EMQX dashboard Add HTTPRoute resource to expose EMQX dashboard through the internal Gateway API.

--- a/kubernetes/apps/iot/emqx/cluster/kustomization.yaml
+++ b/kubernetes/apps/iot/emqx/cluster/kustomization.yaml
@@ -6,3 +6,9 @@ resources:
   - ./cluster.yaml
   - ./gatus.yaml
   - ./podmonitor.yaml
+  - ./httproute.yaml
+postBuild:
+  substituteFrom:
+    - name: cluster-secrets
+      kind: Secret
+      namespace: flux-system
