fix: Increase helm timeout on upgrades for grafana

--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -28,6 +28,7 @@ spec:
     remediation:
       retries: -1
   upgrade:
+    timeout: 30m
     cleanupOnFail: true
     remediation:
       retries: 3
