feat: Add HTTPRoute for EMQX dashboard
Added HTTPRoute and configured variable substitution for accessing EMQX dashboard via the internal Gateway API

--- a/kubernetes/apps/iot/emqx/cluster/kustomization.yaml
+++ b/kubernetes/apps/iot/emqx/cluster/kustomization.yaml
@@ -2,13 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: iot
 resources:
   - ./cluster.yaml
   - ./gatus.yaml
   - ./podmonitor.yaml
   - ./httproute.yaml
-postBuild:
-  substituteFrom:
-    - name: cluster-secrets
-      kind: Secret
-      namespace: flux-system
