--- a/kubernetes/apps/iot/emqx/ks.yaml
+++ b/kubernetes/apps/iot/emqx/ks.yaml
@@ -54,3 +54,7 @@ spec:
   targetNamespace: *namespace
   timeout: 5m
   wait: true
+  postBuild:
+    substituteFrom:
+      - kind: Secret
+        name: cluster-secrets
