--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -6,13 +6,9 @@ metadata:
   name: unpoller
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: app-template
-      sourceRef:
-        kind: OCIRepository
-        name: app-template
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: app-template
   install:
     remediation:
       retries: -1
