feat: add kromgo to gatus

--- a/kubernetes/apps/observability/kromgo/ks.yaml
+++ b/kubernetes/apps/observability/kromgo/ks.yaml
@@ -10,6 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
+  components:
+    - ../../../../components/gatus/public
   path: ./kubernetes/apps/observability/kromgo/app
   postBuild:
     substitute:
