feat: Add EMQX dashboard endpoint to Gatus monitoring
  Add a new monitoring endpoint for the EMQX dashboard web interface
  in the Gatus configuration. This complements the existing MQTT
  broker monitoring and ensures both interfaces are being monitored
  for availability.

--- a/kubernetes/apps/iot/emqx/cluster/gatus.yaml
+++ b/kubernetes/apps/iot/emqx/cluster/gatus.yaml
@@ -19,3 +19,11 @@ data:
           - "[CONNECTED] == true"
         alerts:
           - type: pushover
+      - name: emqx-dashboard
+        group: Infrastructure
+        url: https://emqx.k8s.${SECRET_DOMAIN}/dashboard/
+        interval: 5m
+        conditions:
+          - "[STATUS] == 200"
+        alerts:
+          - type: pushover
