--- a/kubernetes/apps/iot/emqx/cluster/gatus.yaml
+++ b/kubernetes/apps/iot/emqx/cluster/gatus.yaml
@@ -23,6 +23,8 @@ data:
         group: Infrastructure
         url: https://emqx.k8s.${SECRET_DOMAIN}/dashboard/
         interval: 5m
+        client:
+          dns-resolver: tcp://192.168.168.1:53
         conditions:
           - "[STATUS] == 200"
         alerts:
