--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -9,6 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/internal
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
@@ -17,6 +19,7 @@ spec:
   postBuild:
     substitute:
       APP: kube-prometheus-stack
+      GATUS_SUBDOMAIN: prometheus
     substituteFrom:
       - name: cluster-secrets
         kind: Secret
