Trying to fix a thing or two

--- a/kubernetes/apps/media-services/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media-services/overseerr/app/helmrelease.yaml
@@ -72,7 +72,8 @@ spec:
     route:
       app:
         hostnames:
-          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          # - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - "requests.${SECRET_DOMAIN}"
         parentRefs:
           - name: external
             namespace: kube-system
