chore: Suspend to prepare for migration

--- a/kubernetes/apps/media-services/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media-services/overseerr/app/helmrelease.yaml
@@ -16,6 +16,8 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  # To suspend the HelmRelease for migration, uncomment the next line
+  suspend: true
   values:
     controllers:
       overseerr:
