--- a/kubernetes/apps/media-services/plex/ks.yaml
+++ b/kubernetes/apps/media-services/plex/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app plex
-  namespace: &namespace default
+  namespace: &namespace media-services
 spec:
   commonMetadata:
     labels:
@@ -16,7 +16,7 @@ spec:
     - name: rook-ceph-cluster
       namespace: rook-ceph
   interval: 1h
-  path: ./kubernetes/apps/default/plex/app
+  path: ./kubernetes/apps/media-services/plex/app
   postBuild:
     substitute:
       APP: *app
@@ -41,13 +41,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app plex-tools
-  namespace: &namespace default
+  namespace: &namespace media-services
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/default/plex/tools
+  path: ./kubernetes/apps/media-services/plex/tools
   prune: true
   retryInterval: 2m
   sourceRef:
