--- a/kubernetes/apps/media-services/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media-services/plex/app/helmrelease.yaml
@@ -55,8 +55,8 @@ spec:
             resources:
               requests:
                 cpu: 100m
+                memory: 4Gi
               limits:
-                gpu.intel.com/i915: 1
                 memory: 16Gi
     defaultPodOptions:
       securityContext:
