fix: rename emqx-mqtt to emqx-mqtt-tcp to avoid duplicate gatus endpoint

--- a/kubernetes/apps/iot/emqx/cluster/gatus.yaml
+++ b/kubernetes/apps/iot/emqx/cluster/gatus.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   config.yaml: |
     endpoints:
-      - name: emqx-mqtt
+      - name: emqx-mqtt-tcp
         group: IoT
         url: tcp://emqx-listeners.iot.svc.cluster.local:1883
         interval: 1m
