fix: Update montoring target

--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -25,9 +25,9 @@ spec:
               repository: ghcr.io/unpoller/unpoller
               tag: v2.14.1
             env:
-              TZ: America/New_York
+              TZ: America/Toronto
               UP_UNIFI_DEFAULT_ROLE: vrtx-cluster
-              UP_UNIFI_DEFAULT_URL: https://192.168.1.1
+              UP_UNIFI_DEFAULT_URL: https://192.168.168.1
               UP_PROMETHEUS_HTTP_LISTEN: 0.0.0.0:80
               UP_INFLUXDB_DISABLE: true
             envFrom:
