fix: update plex-off-deck to use correct namespace in server URL

--- a/kubernetes/apps/media-services/plex/tools/off-deck/externalsecret.yaml
+++ b/kubernetes/apps/media-services/plex/tools/off-deck/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         config.ini: |
           [auth]
-          server_baseurl = http://plex.iot.svc.cluster.local:32400
+          server_baseurl = http://plex.media-services.svc.cluster.local:32400
           server_token   = {{ .PLEX_TOKEN }}
   dataFrom:
     - extract:
