--- a/kubernetes/apps/media-services/prowlarr/ks.yaml
+++ b/kubernetes/apps/media-services/prowlarr/ks.yaml
@@ -15,7 +15,8 @@ spec:
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
-    - name: external-secrets-stores
+    - name: onepassword-connect
+      namespace: external-secrets
   interval: 1h
   path: ./kubernetes/apps/media-services/prowlarr/app
   postBuild:
