--- a/kubernetes/apps/media-services/kustomization.yaml
+++ b/kubernetes/apps/media-services/kustomization.yaml
@@ -7,5 +7,6 @@ components:
   - ../../components/common
 resources:
   - ./plex/ks.yaml
+  - ./sonarr/ks.yaml
   - ./prowlarr/ks.yaml
   - ./overseerr/ks.yaml
