--- a/kubernetes/apps/media-services/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media-services/sonarr/app/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
                 port: *port
     persistence:
       config:
-        existingClaim: sonarr\
+        existingClaim: sonarr
       config-cache:
         existingClaim: sonarr-cache
         globalMounts:
