--- a/kubernetes/apps/media-services/kustomization.yaml
+++ b/kubernetes/apps/media-services/kustomization.yaml
@@ -8,5 +8,6 @@ components:
 resources:
   - ./plex/ks.yaml
   - ./sonarr/ks.yaml
+  - ./radarr/ks.yaml
   - ./prowlarr/ks.yaml
   - ./overseerr/ks.yaml
