--- a/kubernetes/apps/media-services/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media-services/overseerr/app/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
     route:
       app:
         hostnames:
-          # - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
           - "requests.${SECRET_DOMAIN}"
         parentRefs:
           - name: external
