--- a/kubernetes/apps/media-services/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media-services/radarr/app/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
     remediation:
       retries: 3
   # To suspend the HelmRelease for migration, uncomment the next line
-  suspend: true
+  # suspend: true
   values:
     controllers:
       radarr:
