fix: Update gatus checks

--- a/kubernetes/components/gatus/internal/config.yaml
+++ b/kubernetes/components/gatus/internal/config.yaml
@@ -10,4 +10,5 @@ endpoints:
       query-name: "${GATUS_SUBDOMAIN:=${APP}}.k8s.${SECRET_DOMAIN}"
       query-type: A
     conditions:
-      - "len([BODY]) == 0"
+      - "len([BODY]) != 0"
+      - "[STATUS] == ${GATUS_STATUS:=200}"
