fix: Use internal DNS

--- a/kubernetes/components/gatus/internal/config.yaml
+++ b/kubernetes/components/gatus/internal/config.yaml
@@ -6,6 +6,8 @@ endpoints:
     ui:
       hide-hostname: true
       hide-url: true
+    client:
+      dns-resolver: tcp://192.168.168.1:53
     conditions:
       - "len([BODY]) != 0"
       - "[STATUS] == ${GATUS_STATUS:=200}"
