feat: Github things

--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/vrtx-cluster/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/vrtx-cluster/helmrelease.yaml
@@ -30,6 +30,8 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  # Suspend the release
+  suspend: true
   values:
     githubConfigUrl: https://github.com/jsenecal/vrtx-cluster
     githubConfigSecret: vrtx-cluster-runner-secret
