--- a/kubernetes/apps/observability/snmp-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/snmp-exporter/app/helmrelease.yaml
@@ -42,22 +42,22 @@ spec:
         - name: vrtx-chassis
           module: ["dell"]
           target: 192.168.255.200
-          auth: ["public_v2c"]
+          auth: ["public_v2"]
         # VRTX Node Alpha
         - name: vrtx-alpha
           module: ["dell"]
           target: 192.168.255.201
-          auth: ["public_v2c"]
+          auth: ["public_v2"]
         # VRTX Node Bravo
         - name: vrtx-bravo
           module: ["dell"]
           target: 192.168.255.202
-          auth: ["public_v2c"]
+          auth: ["public_v2"]
         # VRTX Node Charlie
         - name: vrtx-charlie
           module: ["dell"]
           target: 192.168.255.203
-          auth: ["public_v2c"]
+          auth: ["public_v2"]
         # The APC UPS
         - name: apcups
           module: ["apcups"]
