--- a/kubernetes/apps/observability/snmp-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/snmp-exporter/app/helmrelease.yaml
@@ -43,21 +43,35 @@ spec:
           module: ["dell"]
           target: 192.168.255.200
           auth: ["public_v2"]
+          scrapeTimeout: 60s
         # VRTX Node Alpha
         - name: vrtx-alpha
           module: ["dell"]
           target: 192.168.255.201
           auth: ["public_v2"]
+          scrapeTimeout: 60s
+
         # VRTX Node Bravo
         - name: vrtx-bravo
           module: ["dell"]
           target: 192.168.255.202
           auth: ["public_v2"]
+          scrapeTimeout: 60s
+
         # VRTX Node Charlie
         - name: vrtx-charlie
           module: ["dell"]
           target: 192.168.255.203
           auth: ["public_v2"]
+          scrapeTimeout: 60s
+
+        # VRTX Node Delta
+        - name: vrtx-delta
+          module: ["dell"]
+          target: 192.168.255.204
+          auth: ["public_v2"]
+          scrapeTimeout: 60s
+
         # The APC UPS
         - name: apcups
           module: ["apcups"]
