--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -215,3 +215,4 @@ controlPlane:
   patches:
     - "@./patches/controller/admission-controller-patch.yaml"
     - "@./patches/controller/cluster.yaml"
+    - "@./patches/controller/machine-features.yaml"
