chore: Unsuspend actions-runner-controller

--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/vrtx-cluster/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/vrtx-cluster/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
     remediation:
       retries: 3
   # Suspend the release
-  suspend: true
+  # suspend: true
   values:
     githubConfigUrl: https://github.com/jsenecal/vrtx-cluster
     githubConfigSecret: vrtx-cluster-runner-secret
