--- a/talos/patches/global/machine-sysctls.yaml
+++ b/talos/patches/global/machine-sysctls.yaml
@@ -4,3 +4,12 @@ machine:
     fs.inotify.max_user_instances: "8192"  # Watchdog
     net.core.rmem_max: "7500000" # Cloudflared | QUIC
     net.core.wmem_max: "7500000" # Cloudflared | QUIC
+    vm.nr_hugepages: "1024" # PostgreSQL
+    net.ipv4.tcp_congestion_control: bbr # 10Gb/s
+    net.ipv4.tcp_fastopen: "3" # Send and accept data in the opening SYN packet
+    net.ipv4.tcp_mtu_probing: "1" # 10Gb/s | Jumbo frames
+    net.ipv4.tcp_rmem: "4096 87380 33554432" # 10Gb/s
+    net.ipv4.tcp_wmem: "4096 65536 33554432" # 10Gb/s
+    net.ipv4.tcp_window_scaling: "1" # 10Gb/s
+    net.core.default_qdisc: fq # 10Gb/s
+
