feat: allow actions-runner to interact with talos

--- a/talos/patches/controller/machine-features.yaml
+++ b/talos/patches/controller/machine-features.yaml
@@ -5,4 +5,6 @@ machine:
       allowedRoles:
         - os:admin
       allowedKubernetesNamespaces:
-        - system-upgrade
+        - "actions-runner-system"
+        - "system-upgrade"
+    stableHostname: true
